Alter to use images + no canvas.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class='size'>
       <label for='size'>size: </label>
       <select id='size'>
+        <option>1024x768</option>
         <option>500x500</option>
         <option>800x600</option>
         <option selected>automatic</option>
@@ -73,11 +74,8 @@
   </div>
 
   <div id="packing">
-    <canvas id="canvas">
-      <div id="unsupported">
-        Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
-      </div>
-    </canvas>
+    <div id="canvas">
+    </div>
   </div>
 
   <script src='js/jquery.js'>        </script>
